# lancedb-c

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  valgrind.supp
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml
docs/: index.rst
examples/: asio_coroutine.cpp  code_search.cpp  full.cpp  s3.cpp  s3_wrapper.cpp  s3vector_concurrent_service.cpp  s3vector_simulation.cpp  simple.cpp  table_creation_and_search.bash
examples/s3_object_store/: Cargo.toml
examples/s3_object_store/src/: lib.rs
include/: lancedb.h
src/: connection.rs  error.rs  expr.rs  index.rs  json.rs  lib.rs  query.rs  table.rs  types.rs
tests/: create_table_insert_vectors_and_query_demo.sh  test_common.cpp  test_common.h  test_connection.cpp  test_df_query.cpp  test_index.cpp  test_json.cpp  test_query.cpp  test_table.cpp  test_table_async.cpp  test_table_coro.cpp  test_table_meta.cpp  test_vector_index.cpp  test_vector_query.cpp
