# This file should be copied to /home/yuvalif/lancedb/c/Cargo.toml

[package]
name = "lancedb-c"
version = "0.22.3"
edition = "2021"
description = "C bindings for LanceDB"
license = "Apache-2.0"
repository = "https://github.com/yuvalif/lancedb-c"
keywords = ["database", "vector", "search", "c", "ffi"]
categories = ["database", "api-bindings"]
rust-version = "1.78.0"

[lib]
name = "lancedb"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.23", features = ["rt-multi-thread"] }
libc = "0.2"
lancedb = { version = "0.22.3", features = ["remote"] }
lance = "0.39.0"
arrow = { version = "56.2", optional = false }
arrow-array = "56.2"
arrow-data = "56.2"
arrow-schema = "56.2"
futures = "0"
chrono = "0"
